--- a/webapp/src/main/webapp/resources/css/signin.css
+++ b/webapp/src/main/webapp/resources/css/signin.css
@@ -44,7 +44,7 @@ body{
 }
 
 .pwd-icon {
-  z-index: 2;
+  z-index: 10;
   right: 5px;
   cursor: pointer;
 }
